# math

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build-and-test.yml  build.yml  deploy.yaml
cmake/: CPM.cmake  FindCatch2.cmake
docs/: .gitignore  Doxyfile  conf.py  index.rst  limit.rst  point.rst
math/geo/: CMakeLists.txt
math/geo/include/math/: point.hpp
math/geo/test/: point_test.cpp
math/limit/: CMakeLists.txt
math/limit/include/math/: limit.hpp
math/limit/test/: limit_test.cpp
math/testing/: CMakeLists.txt
math/testing/include/math/testing/: arithmetic_tests.hpp  base_tests.hpp  equality_tests.hpp  negation_tests.hpp  ostream_tests.hpp  tests.hpp
math/testing/include/math/testing/tests/: arithmetic_tests.hpp  base_tests.hpp  conversion_tests.hpp  equality_tests.hpp  negation_tests.hpp  ostream_tests.hpp
math/testing/test/: tests_test.cpp
math/utils/: CMakeLists.txt
math/utils/include/math/: utils.hpp
math/utils/test/: utils_test.cpp
test/: test.cpp
